# gh-labeler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.json  labels.json  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: audit.toml
.changeset/: README.md  config.json
.claude/: settings.json
.claude/commands/: check.md  coverage.md  test-module.md
.claude/rules/: config-module.md  github-api.md  rust-core.md  sync-module.md
.github/: labels.yml  renovate.json
.github/workflows/: ci.yml  release.yml
scripts/: copy-binary.js  copy-binary.ts  post-install.js  post-install.ts  sync-versions.js  sync-versions.ts
src/: config.rs  error.rs  github.rs  lib.rs  main.rs  similarity.rs  sync.rs
