[package]
name        = "gh-labeler"
version     = "0.1.0"
edition     = "2021"
description = "A fast and reliable GitHub repository label management tool built with Rust"
license     = "MIT"
repository  = "https://github.com/kkhys/gh-labeler"
homepage    = "https://github.com/kkhys/gh-labeler"
documentation = "https://docs.rs/gh-labeler"
readme      = "README.md"
authors     = ["kkhys <your.email@example.com>"]
keywords    = ["github", "labels", "sync", "cli", "automation"]
categories  = ["command-line-utilities", "development-tools"]
exclude     = [
    "bin/",
    "target/",
    ".github/",
    "scripts/",
    "package.json",
    "*.tgz"
]

[[bin]]
name = "gh-labeler"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow     = "1.0"
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror  = "1.0"
tokio      = { version = "1.0", features = ["full"] }

# CLI dependencies
clap    = { version = "4.0", features = ["derive"] }
colored = "2.0"

# GitHub API
octocrab = "0.38"

# Configuration validation
jsonschema = "0.17"

# Utilities
chrono  = { version = "0.4", features = ["serde"] }
futures = "0.3"
url     = "2.4"
