[package]
authors = ["kkhys <hi@kkhys.me>"]
categories = ["command-line-utilities", "development-tools"]
description = "A fast and reliable GitHub repository label management tool built with Rust"
documentation = "https://docs.rs/gh-labeler"
edition = "2021"
exclude = [
  "bin/",
  "target/",
  ".github/",
  ".idea/",
  "scripts/",
  "package.json",
  "labels.json",
  "*.tgz",
]
homepage = "https://github.com/kkhys/gh-labeler"
keywords = ["github", "labels", "sync", "cli", "automation"]
license = "MIT"
name = "gh-labeler"
readme = "README.md"
repository = "https://github.com/kkhys/gh-labeler"
version = "0.1.8"

[[bin]]
name = "gh-labeler"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono      = { version = "0.4", features = ["serde"] }
clap        = { version = "4.0", features = ["derive"] }
colored     = "3.0"
octocrab = "0.45"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
serde_yaml  = "0.9"
thiserror   = "2.0"
tokio       = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3"
